# sales-IQ

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  test_day10_12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day21.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py  test_hash.py
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  briefing.py  collections.py  data_quality.py  matching.py  ocr.py  prediction.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin_panel.py  agent_hub.py  analytics.py  auth.py  briefings.py  cfo_dashboard.py  collections.py  collections_copilot.py  credit_limits.py  csv_import.py  customers.py  dashboard.py  data_quality.py  demo_data.py  disputes.py  executive_dashboard.py  intelligence.py  invoices.py  locale.py  milestone.py  notifications.py  payments.py  performance.py  sales_dashboard.py  sso.py  users.py  webhooks.py
backend/app/core/: cache.py  config.py  database.py  deps.py  query_optimizer.py  security.py  seed.py
backend/app/middleware/: audit.py  error_handler.py  i18n.py  performance.py
backend/app/models/: __init__.py  base.py  business.py  core.py
backend/app/schemas/: __init__.py  admin.py  agent_hub.py  analytics.py  auth.py  briefings.py  business.py  cfo_dashboard.py  collections_copilot.py  data_quality.py  executive_dashboard.py  intelligence.py  locale.py  notifications.py  sales_dashboard.py  webhooks.py  workflows.py
backend/app/services/: admin.py  agent_registry.py  alert_engine.py  analytics_engine.py  cfo_dashboard.py  collections_copilot.py  csv_import.py  demo_data.py  executive_dashboard.py  intelligence.py  sales_dashboard.py  webhook_engine.py
backend/migrations/: env.py
backend/migrations/versions/: 4be230e39696_initial_schema.py  82bd4b8954e9_add_tenant_fk.py  c3f7a1d20e01_day20_performance_indexes.py
data/demo/: run-demo.js
data/seeds/: gcc_fmcg.json  manufacturing.json
docker/postgres/: init.sql
docs/: SalesIQ_Investor_Demo_Deck.pptx
frontend/: jest.config.js  jest.setup.tsx  next.config.mjs  package-lock.json  package.json
frontend/src/__tests__/components/: badge.test.tsx  button.test.tsx  data-table.test.tsx  ui-primitives.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+47 files in other folders)
