[project]
name = "salesiq-backend"
version = "0.1.0"
description = "Sales IQ - Agentic Revenue Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # --- Redis / Caching ---
    "redis>=5.0.0",

    # --- Task Queue ---
    "celery[redis]>=5.4.0",

    # --- Auth / Security ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",

    # --- AI / ML ---
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "prophet>=1.1.5",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # --- Data Quality ---
    "thefuzz[speedup]>=0.22.0",
    "phonenumbers>=8.13.0",
    "pycountry>=23.12.0",

    # --- Document Processing ---
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",

    # --- Object Storage ---
    "minio>=7.2.0",

    # --- Email ---
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",

    # --- Utilities ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
